tests/security/taintPopen/output.txt
ERROR: TaintedData - input.hack:1:13 - Data from a server request found its way to a shell command